fixed layout issue with new mark as completed button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1045,17 +1045,60 @@ font-weight: bold;
   margin-right: 5px;
 }
 
-.custom-btn-complete-request_my {
+/* .custom-btn-complete-request_my {
   background-color: #6c757d;
   border-color: #6c757d;
   color: white;
   margin-right: 20px;
-  align-self: center; /* Center vertically */
+  align-self: center; 
 }
 
 .custom-btn-complete-request_my:hover {
-  background-color: #5a6268; /* Slightly darker shade for hover effect */
+  background-color: #5a6268; 
   border-color: #545b62;
+} */
+
+.complete-btn_mark_completed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #6c757d;
+  background-color: #6c757d;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: width 0.3s ease;
+  position: relative;
+  white-space: nowrap; /* Ensure text stays in a single line */
+}
+
+.complete-btn_mark_completed:hover {
+  width: 160px;
+  border-radius: 5px; /* Ensure rounded corners are maintained */
+}
+
+.tick-icon_mark_completed {
+  font-size: 24px;
+  color: white;
+}
+
+.complete-text_mark_completed {
+  display: none;
+  background-color: #6c757d;
+  color: white;
+  font-weight: bold;
+  margin-left: 0px;
+  padding: 40px;
+  white-space: nowrap; /* Ensure text stays in a single line */
+}
+
+.complete-btn_mark_completed:hover .tick-icon_mark_completed {
+  display: none;
+}
+
+.complete-btn_mark_completed:hover .complete-text_mark_completed {
+  display: inline;
 }
 
 .card-title_requests_index_my {
